--- a/charts/postfix/templates/secret_mx_tls.yaml
+++ b/charts/postfix/templates/secret_mx_tls.yaml
@@ -5,7 +5,8 @@ metadata:
   name: {{ .Values.mx_tls.name }}
   labels:
     {{- include "postfix.labels" . | nindent 4 }}
-type: Opaque
+type: kubernetes.io/tls
 data:
-  mx-tls: {{ .Values.mx_tls.data.mx_tls | b64enc }}
+  tls.crt: {{ .Values.mx_tls.data.tls_crt | b64enc }}
+  tls.key: {{ .Values.mx_tls.data.tls_key | b64enc }}
 {{- end }}
