--- a/charts/postfix/templates/secret_pgsql_transport.yaml
+++ b/charts/postfix/templates/secret_pgsql_transport.yaml
@@ -7,5 +7,5 @@ metadata:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
 data:
-  ppgsql-transport.cf: {{ .Values.pgsql_transport.data.pgsql_transport.cf | b64enc }}
+  ppgsql-transport.cf: {{ .Values.pgsql_transport.data.pgsql_transport_cf | b64enc }}
 {{- end }}
