--- a/charts/postfix/templates/secret_pgsql_mailman_recipients.yaml
+++ b/charts/postfix/templates/secret_pgsql_mailman_recipients.yaml
@@ -7,5 +7,5 @@ metadata:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
 data:
-  pgsql-mailman-recipients.cf: {{ .Values.pgsql_mailman_recipients.data.pgsql_mailman_recipients.cf | b64enc }}
+  pgsql-mailman-recipients.cf: {{ .Values.pgsql_mailman_recipients.data.pgsql_mailman_recipients | b64enc }}
 {{- end }}
