--- a/charts/postfix/templates/secret_pgsql_relay_domains.yaml
+++ b/charts/postfix/templates/secret_pgsql_relay_domains.yaml
@@ -7,5 +7,5 @@ metadata:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
 data:
-  pgsql-relay-domains.cf: {{ .Values.pgsql_relay_domains.data.pgsql_relay_domains.cf | b64enc }}
+  pgsql-relay-domains.cf: {{ .Values.pgsql_relay_domains.data.pgsql_relay_domains | b64enc }}
 {{- end }}
