--- a/charts/postfix/templates/secret_pgsql_relay_domains_mm.yaml
+++ b/charts/postfix/templates/secret_pgsql_relay_domains_mm.yaml
@@ -7,5 +7,5 @@ metadata:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
 data:
-  pgsql_relay_domains_mm.cf: {{ .Values.pgsql_relay_domains_mm.data.pgsql_relay_domains_mm.cf | b64enc }}
+  pgsql_relay_domains_mm_cf: {{ .Values.pgsql_relay_domains_mm.data.pgsql_relay_domains_mm | b64enc }}
 {{- end }}
