--- a/charts/postfix/templates/secret_pgsql_transport_mm.yaml
+++ b/charts/postfix/templates/secret_pgsql_transport_mm.yaml
@@ -7,5 +7,5 @@ metadata:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
 data:
-  ppgsql-transport-mm.cf: {{ .Values.pgsql_transport_mm.data.pgsql_transport_mm.cf | b64enc }}
+  pgsql-transport-mm.cf: {{ .Values.pgsql_transport_mm.data.pgsql_transport_mm | b64enc }}
 {{- end }}
