--- a/charts/postfix/templates/secret_pgsql_virtual.yaml
+++ b/charts/postfix/templates/secret_pgsql_virtual.yaml
@@ -7,5 +7,5 @@ metadata:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
 data:
-  pgsql-virtual.cf: {{ .Values.pgsql_virtual.data.pgsql_virtual.cf | b64enc }}
+  pgsql-virtual.cf: {{ .Values.pgsql_virtual.data.pgsql_virtual | b64enc }}
 {{- end }}
