chore(helm): fixup dupe secret volume names

--- a/charts/postfix/templates/secret_mx_tls.yaml
+++ b/charts/postfix/templates/secret_mx_tls.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.mx_tls.name }}
+  name: {{ .Values.mx_tls.name | replace "_" "-" }}
   labels:
     {{- include "postfix.labels" . | nindent 4 }}
 type: kubernetes.io/tls
