--- a/charts/postfix/templates/secret_pgsql_relay_domains.yaml
+++ b/charts/postfix/templates/secret_pgsql_relay_domains.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.pgsql_relay_domains.name }}
+  name: {{ .Values.pgsql_relay_domains.name | replace "_" "-" }}
   labels:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
