--- a/charts/postfix/templates/deployment.yaml
+++ b/charts/postfix/templates/deployment.yaml
@@ -114,6 +114,7 @@ spec:
           {{- end }}
           {{- end }}
       volumes:
+        {{- $mounts := list }}
         - name: postfix-init
           configMap:
             name: postfix-init
@@ -133,49 +134,17 @@ spec:
           secret:
             secretName: {{ .Values.postfix.tlsExistingSecretName }}
         {{- end }}
-        {{- if .Values.postfix.transport_maps }}
-          {{- range $pfmap := .Values.postfix.transport_maps }}
-            {{- $secrets := list }}
-            {{- $secretList := append $secrets $pfmap.existingSecretName }}
-            {{- range $secretList | uniq }}
-        - name: {{ . }}
-          secret:
-            secretName: {{ . }}
-            {{- end }}
-          {{- end }}
+        {{- $new := dict }}
+        {{- $allMaps := merge $new .Values.postfix.transport_maps .Values.postfix.relay_domains .Values.postfix.local_recipient_maps .Values.postfix.virtual_alias_maps }}
+        {{- $newList := list }}
+        {{- $newer := list }}
+        {{- range $allMaps }}
+        {{- $newList = mustAppend $newList .existingSecretName }}
         {{- end }}
-        {{- if .Values.postfix.relay_domains }}
-          {{- range $pfmap := .Values.postfix.relay_domains }}
-            {{- $secrets := list }}
-            {{- $secretList := append $secrets $pfmap.existingSecretName }}
-            {{- range $secretList | uniq }}
-        - name: {{ . }}
+        {{- range $secretName := $newList | uniq }}
+        - name: {{ $secretName }}
           secret:
-            secretName: {{ . }}
-            {{- end }}
-          {{- end }}
-        {{- end }}
-        {{- if .Values.postfix.local_recipient_maps }}
-          {{- range $pfmap := .Values.postfix.local_recipient_maps }}
-            {{- $secrets := list }}
-            {{- $secretList := append $secrets $pfmap.existingSecretName }}
-            {{- range $secretList | uniq }}
-        - name: {{ . }}
-          secret:
-            secretName: {{ . }}
-            {{- end }}
-          {{- end }}
-        {{- end }}
-        {{- if .Values.postfix.virtual_alias_maps }}
-          {{- range $pfmap := .Values.postfix.virtual_alias_maps }}
-            {{- $secrets := list }}
-            {{- $secretList := append $secrets $pfmap.existingSecretName }}
-            {{- range $secretList | uniq }}
-        - name: {{ . }}
-          secret:
-            secretName: {{ . }}
-            {{- end }}
-          {{- end }}
+            secretName: {{ $secretName }}
         {{- end }}
 
       {{- with .Values.nodeSelector }}
