--- a/charts/postfix/templates/secret_pgsql_mailman_recipients.yaml
+++ b/charts/postfix/templates/secret_pgsql_mailman_recipients.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.pgsql_mailman_recipients.name }}
+  name: {{ .Values.pgsql_mailman_recipients.name | replace "_" "-"}}
   labels:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
