--- a/charts/postfix/templates/secret_pgsql_transport_mm.yaml
+++ b/charts/postfix/templates/secret_pgsql_transport_mm.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.pgsql_transport_mm.name }}
+  name: {{ .Values.pgsql_transport_mm.name | replace "_" "-" }}
   labels:
     {{- include "postfix.labels" . | nindent 4 }}
 type: Opaque
