--- a/charts/postfix/templates/service.yaml
+++ b/charts/postfix/templates/service.yaml
@@ -13,5 +13,7 @@ spec:
       name: smtpssl
     - port: 587
       name: smtps
+    - port: 10026
+      name: smtpss
   selector:
     {{- include "postfix.selectorLabels" . | nindent 4 }}
