--- a/charts/postfix/values.yaml
+++ b/charts/postfix/values.yaml
@@ -19,6 +19,7 @@ pgsql_transport_mm:
       dbname       = my_db_name
       hosts        = my_db_host
       query        = select email from mailman_recipients where email = '%s'
+
 pgsql_relay_domains_mm:
   create: false
   name: pgsql_relay_domains_mm
@@ -29,6 +30,7 @@ pgsql_relay_domains_mm:
       dbname       = my_db_name
       hosts        = my_db_host
       query        = select email from mailman_recipients where email = '%s'
+
 pgsql_relay_domains:
   create: false
   name: pgsql_relay_domains
@@ -39,6 +41,7 @@ pgsql_relay_domains:
       dbname       = my_db_name
       hosts        = my_db_host
       query        = select email from mailman_recipients where email = '%s'
+
 pgsql_mailman_recipients:
   create: false
   name: pgsql_mailman_recipients
@@ -49,6 +52,18 @@ pgsql_mailman_recipients:
       dbname       = my_db_name
       hosts        = my_db_host
       query        = select email from mailman_recipients where email = '%s'
+
+pgsql_virtual_recipients:
+  create: false
+  name: pgsql_mailman_recipients
+  data:
+    pgsql_mailman_recipients: |
+      user         = my_db_user
+      password     = my_db_pass
+      dbname       = my_db_name
+      hosts        = my_db_host
+      query        = select email from mailman_recipients where email = '%s'
+
 pgsql_virtual:
   create: false
   name: pgsql-virtual
@@ -59,6 +74,7 @@ pgsql_virtual:
       dbname       = my_db_name
       hosts        = my_db_host
       query        = select email from mailman_recipients where email = '%s'
+
 mx_tls:
   create: false
   name: mx_tls
@@ -106,6 +122,9 @@ postfix:
     "pgsql:/etc/postfix/pgsql-mailman-recipients.cf":
       existingSecretName: pgsql-mailman-recipients
       existingSecretKey: pgsql-mailman-recipients.cf
+    "pgsql:/etc/postfix/pgsql-virtual-recipients.cf":
+      existingSecretName: pgsql-virtual-recipients
+      existingSecretKey: pgsql-virtual-recipients.cf
   virtual_alias_maps:
     "pgsql:/etc/postfix/pgsql-virtual.cf":
       existingSecretName: pgsql-virtual
